--- a/portlets/opencps-portlet/docroot/WEB-INF/sql/indexes.properties
+++ b/portlets/opencps-portlet/docroot/WEB-INF/sql/indexes.properties
@@ -64,6 +64,8 @@ IX_6C5D93CC=opencps_dossier.OID
 IX_C4F61572=opencps_dossier.ReceptionNo
 IX_577EF680=opencps_dossier.ServiceInfoId
 
+IX_A19FA465=opencps_dossier_file.DID_SS_DPID_R
+IX_F19A3712=opencps_dossier_file.DID_SS_R
 IX_67263BCC=opencps_dossier_file.D_DP
 IX_8A78397A=opencps_dossier_file.D_DP_GF
 IX_75A4E0C9=opencps_dossier_file.D_GF
@@ -72,6 +74,7 @@ IX_67263BCC=opencps_dossier_file.DossierFileInUse
 IX_8A78397A=opencps_dossier_file.DossierFileInUseByGroupFileId
 IX_A490E01D=opencps_dossier_file.DossierId
 IX_71A2C206=opencps_dossier_file.F_D_S_R
+IX_71A2C206=opencps_dossier_file.GFID_DID_SS_R
 IX_631CFB61=opencps_dossier_file.Oid
 IX_F6264B48=opencps_dossier_file.TemplateFileNoDossierId
 
